# skyedge-vtol-ws

./: .gitignore  CONTRIBUTING.md  README.md  setup.sh  shell.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_check.yml  lint_check.yml
docker/: Dockerfile  docker-compose.yml
docs/: README.md  architecture.md  docker.md  foxglove_setup.md  git_basics.md  github_issues_guide.md  monitoring.md  ros2_study_links.md  simulation.md  tdd_guide.md  test_spec.md
monitor/: health.sh  hz.sh  mission.sh  nav.sh  status.sh  vision.sh
src/vtol/: CMakeLists.txt  package.xml
src/vtol/config/: global_params.yaml
src/vtol/launch/: real_launch.py  sim_launch.py
src/vtol/src/: waypoint_nav_node.py
src/vtol_bringup/: CMakeLists.txt  package.xml
src/vtol_bringup/config/: global_params.yaml
src/vtol_bringup/launch/: real_launch.py  sim_launch.py
src/vtol_comm_lte/: CMakeLists.txt  package.xml
src/vtol_comm_lte/src/: telemetry_node.py
src/vtol_control_nav/: CMakeLists.txt  package.xml
src/vtol_control_nav/src/: waypoint_nav_node.py
src/vtol_control_task/: CMakeLists.txt  package.xml
src/vtol_control_task/src/: precision_task_node.py
src/vtol_hw_gripper/: CMakeLists.txt  package.xml
src/vtol_hw_gripper/src/: arduino_cmd_node.py
src/vtol_vision/: CMakeLists.txt  package.xml
src/vtol_vision/src/: aruco_detect_node.py  yolo_detect_node.py
src/vtol_vision_aruco/: CMakeLists.txt  package.xml
src/vtol_vision_aruco/src/: aruco_detect_node.py
src/vtol_vision_yolo/: CMakeLists.txt  package.xml
src/vtol_vision_yolo/src/: yolo_detect_node.py
test/: mock_ros2.py
test/contract/: test_node_entrypoints.py  test_spec_contract.py
test/integration/: test_tc007_full_mission.py
test/unit/: test_comm_lte.py  test_control_task.py  test_hw_gripper.py  test_vision_aruco.py  test_vision_yolo.py  test_waypoint_nav.py
