<?xml version="1.0"?>
<package format="3">
  <name>vtol</name>
  <version>0.1.0</version>
  <description>VTOL 통합 패키지 — 웨이포인트 네비게이션, 런치, 설정</description>
  <maintainer email="team@vtol.dev">총괄</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
