<?xml version="1.0"?>
<package format="3">
  <name>vtol_vision</name>
  <version>0.1.0</version>
  <description>VTOL 비전 패키지 — YOLO 객체 탐지 및 ArUco 마커 인식</description>
  <maintainer email="team@vtol.dev">비전팀</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
